FixVisibleScroll

--- a/css/style.less
+++ b/css/style.less
@@ -86,11 +86,6 @@ h2 {
 	transform: scale(-1, -1);
 }
 
-/* Общие отступы */
-.row > * {
-	padding: 0;
-}
-
 ul {
 	padding-left: 0;
 	margin-bottom: 0;
